--- a/src/main/resources/HTML/ViewPage.html
+++ b/src/main/resources/HTML/ViewPage.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cagliostro&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../CSS/ViewPage.css">
     <script src="../JS/ViewPage.js"></script>
 
