Added : Logic for theme change
Theme change implemented via CSS variables and JS

--- a/src/main/resources/HTML/ViewPage.html
+++ b/src/main/resources/HTML/ViewPage.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html class="theme-light">
 
 <head>
     <meta charset="utf-8" name="viewport">
@@ -106,8 +106,8 @@
         <div>
             Made with ❤️ by Soham
         </div>
-        <div>
-            Theme
+        <div style="width: 100px">
+            <img alt="" src="../assets/sunny.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="imgClickAndChange" onclick="changeImage()" />
         </div>
         <div>
             Leave a thought?
