Added : Dropdown navbar effects
The menu autohides when a link is selected in mobile view

--- a/src/main/resources/HTML/ViewPage.html
+++ b/src/main/resources/HTML/ViewPage.html
@@ -22,29 +22,29 @@
 
     <!-- your content here... -->
     <div class="header-section">
-        <div class="material-icons navbar-icon" onclick="showmenu()" id="">menu</div>
+        <div class="material-icons navbar-icon" onclick="showmenu()">menu</div>
         <div class="header-links">
-            <a href="#Summary_heading">Summary
+            <a href="#Summary_heading" onclick="hidedivs()">Summary
             </a>
         </div>
         <div class="header-links">
-            <a href="#Snp_heading">Skills and Projects
+            <a href="#Snp_heading" onclick="hidedivs()">Skills and Projects
             </a>
         </div>
         <div class="header-links">
-            <a href="#we_heading">Work Experience
+            <a href="#we_heading" onclick="hidedivs()">Work Experience
             </a>
         </div>
         <div class="header-links">
-            <a href="#ap_heading">Academic Profile
+            <a href="#ap_heading" onclick="hidedivs()">Academic Profile
             </a>
         </div>
         <div class="header-links">
-            <a href="#cas_heading">Lets get a bit casual?
+            <a href="#cas_heading" onclick="hidedivs()">Lets get a bit casual?
             </a>
         </div>
         <div class="header-links">
-            <a href="#abp_heading">About the page
+            <a href="#abp_heading" onclick="hidedivs()">About the page
             </a>
         </div>
     </div>
@@ -110,7 +110,7 @@
             <img alt="" src="../assets/sunny.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="imgClickAndChange" onclick="changeImage()" />
         </div>
         <div>
-            Leave a thought?
+            Leave a thought?🥺
         </div>
 </body>
 
