Added : Thought box and logic
Click on "leave a thought" shows the thought box. Again clicking on the link or outside hides the box. Box is responsive

--- a/src/main/resources/HTML/ViewPage.html
+++ b/src/main/resources/HTML/ViewPage.html
@@ -48,6 +48,7 @@
             </div>
         </div>
     </div>
+
     <div style="height: 150px;"></div>
     <div class="header-common-left" id="Summary_heading">
         Summary
@@ -102,6 +103,8 @@
         survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
         publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </div>
+    <div class="thought-box sb4" id="thought-box">Test Text
+    </div>
     <div class="footer-section">
         <div>
             Made with ❤️ by Soham
@@ -109,7 +112,7 @@
         <div style="width: 100px">
             <img href=""><img alt="" src="../assets/sunny.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="imgClickAndChange" onclick="changeImage()" /></img>
         </div>
-        <div class="header-links">
+        <div id="thought-link" onclick="showThoughtBox()">
             Leave a thought?🥺
         </div>
         </a>
