Refactored : Post box click effects
Modified code to improve the click effect

--- a/src/main/resources/HTML/ViewPage.html
+++ b/src/main/resources/HTML/ViewPage.html
@@ -103,9 +103,14 @@
         survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
         publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </div>
-    <div class="thought-box sb4" id="thought-box">Test Text
+
     </div>
     <div class="footer-section">
+        <div class="thought-box sb4" id="thought-box">
+            <div>Thank you for considering to share your valuable opinions with me. Please feel free to speak your thoughts out.</div>
+            <input type="text" id="lname" name="lname"><br><br>
+            <button id="post_button">Post</button>
+        </div>
         <div>
             Made with ❤️ by Soham
         </div>
@@ -113,9 +118,10 @@
             <img href=""><img alt="" src="../assets/sunny.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="imgClickAndChange" onclick="changeImage()" /></img>
         </div>
         <div id="thought-link" onclick="showThoughtBox()">
-            Leave a thought?🥺
+            Share a thought?
         </div>
-        </a>
+    </div>
+
 </body>
 
 </html>
