Refactored : Improved postbox usability
Added support for multiline input and improved click functionalities

--- a/src/main/resources/HTML/ViewPage.html
+++ b/src/main/resources/HTML/ViewPage.html
@@ -108,7 +108,7 @@
     <div class="footer-section">
         <div class="thought-box sb4" id="thought-box">
             <div>Thank you for considering to share your valuable opinions with me. Please feel free to speak your thoughts out.</div>
-            <input type="text" id="lname" name="lname"><br><br>
+            <textarea name="lname" id="lname" rows="15"></textarea><br>
             <button id="post_button">Post</button>
         </div>
         <div>
