Tested : First major release
Deployed Webapp to Heroku. Frontend working as expected

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<html lang="en" class="theme-light">
+<!doctype html class="theme-light">
 
 <head>
     <meta charset="utf-8" name="viewport">
@@ -14,8 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cagliostro&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../CSS/ViewPage.css">
-    <script src="../JS/ViewPage.js"></script>
+    <link rel="stylesheet" href="./CSS/ViewPage.css">
+    <script src="./JS/ViewPage.js"></script>
 
 </head>
 
@@ -105,7 +104,6 @@
         publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </div>
 
-    </div>
     <div class="footer-section">
         <div class="thought-box sb4" id="thought-box">
             <div>Thank you for considering to share your valuable opinions with me. Please feel free to speak your thoughts out.</div>
@@ -116,7 +114,7 @@
             Made with ❤️ by Soham
         </div>
         <div style="width: 100px">
-            <img href=""><img alt="" src="../assets/sunny.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="imgClickAndChange" onclick="changeImage()" /></img>
+            <img href=""><img alt="" src="./assets/sunny.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="imgClickAndChange" onclick="changeImage()" /></img>
         </div>
         <div id="thought-link" onclick="showThoughtBox()">
             Share a thought?
