Added : "About" section information

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -99,14 +99,28 @@
         About the page
     </div>
     <div class="body-common">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
-        survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-        publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        This is my flagship project, developed in an attempt to have better understanding of different technologies used in full-stack development. The technologies used to develop the webapp are as follows:-
+        <ul>
+            <li>WebApp Framework -
+                <a href="https://docs.spring.io/spring-framework/docs/3.2.x/spring-framework-reference/html/mvc.html" target="_blank">Spring MVC</a>
+            </li>
+            <li>Client side interfaces -
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">HTML</a>,
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a> and
+                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a>
+            </li>
+            <li>Webpage hosting -
+                <a href="https://www.heroku.com/" target="_blank">Heroku</a></li>
+            <li>Database support -
+                <a href="https://www.mongodb.com/atlas/database" target="_blank">MongoDB Atlas</a>
+            </li>
+        </ul>
+        The project source code can be viewd <a href="https://github.com/soham874/Online-Web-Resume" target="_blank">here</a>.
     </div>
 
     <div class="footer-section">
         <div class="thought-box sb4" id="thought-box">
-            <div>Thank you for considering to share your valuable opinions with me. Please feel free to speak your thoughts out.</div>
+            <div>Thank you for considering to share your valuable opinions with me</div><br>
             <textarea name="lname" id="lname" rows="15" maxlength="10"></textarea><br>
             <button id="post_button">Post</button>
         </div>
