--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -53,9 +53,12 @@
     <div class="header-common-left" id="Summary_heading">
         Summary
     </div>
-    <div class="body-common">
-        I am a junior level tech entusiast with an inquisitive mind, always on the lookout to learn new technologies and have at least a fundamental level of understanding about how things work. This webpage has been designed to give a quick insight into my academic
-        and professional journey.
+    <div class="summary" style="display: flex;">
+        <div style="padding: 30px;">
+            I am a junior level tech entusiast with an inquisitive mind, always on the lookout to learn new technologies and have at least a fundamental level of understanding about how things work. This webpage has been designed to give a quick insight into my academic
+            and professional journey so far.
+        </div>
+        <img class="hex-background" src="./assets/displaypic.jpeg">
     </div>
 
     <div class="header-common-right" id="Snp_heading">
