--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -76,10 +76,10 @@
                 <img class="skill_icons" src="./assets/Skill_items/s1/si14.png" />
             </div>
         </div>
-        <div class="skill_item">Scripting languages</div>
-        <div class="skill_item">Full Stack Technologies</div>
-        <div class="skill_item">Database</div>
-        <div class="skill_item">IDEs</div>
+        <div class="skill_item_group">Scripting languages</div>
+        <div class="skill_item_group">Full Stack Technologies</div>
+        <div class="skill_item_group">Database</div>
+        <div class="skill_item_group">IDEs</div>
     </div>
 
     <div class="header-common-left" id="we_heading">
