Added : Automatic display logic for all skill types

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -64,7 +64,7 @@
     <div class="header-common-right" id="Snp_heading">
         Skills and Projects
     </div>
-    <div class="snp">
+    <div class="snp" id="snp_section">
         <div class="skill_item_group">
             <div class="skill_item" onmouseover="displayeffects(0)">
                 Programming languages
@@ -76,10 +76,18 @@
                 <img class="skill_icons" src="./assets/Skill_items/s1/si14.png" />
             </div>
         </div>
-        <div class="skill_item_group">Scripting languages</div>
-        <div class="skill_item_group">Full Stack Technologies</div>
-        <div class="skill_item_group">Database</div>
-        <div class="skill_item_group">IDEs</div>
+        <div class="skill_item_group">
+            Scripting languages
+        </div>
+        <div class="skill_item_group">
+            Full Stack Technologies
+        </div>
+        <div class="skill_item_group">
+            Database
+        </div>
+        <div class="skill_item_group">
+            IDEs
+        </div>
     </div>
 
     <div class="header-common-left" id="we_heading">
