Refactored : Improved click behaviour
Modified a few icons and tried to improve hover behaviour

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -65,28 +65,8 @@
         Skills and Projects
     </div>
     <div class="snp" id="snp_section">
-        <div class="skill_item_group">
-            <div class="skill_item" onmouseover="displayeffects(0)">
-                Programming languages
-            </div>
-            <div class="skill_icon_group" onmouseleave="hideeffects(0)">
-                <img class="skill_icons" src="./assets/Skill_items/s1/si11.png" />
-                <img class="skill_icons" src="./assets/Skill_items/s1/si12.png" />
-                <img class="skill_icons" src="./assets/Skill_items/s1/si13.png" />
-                <img class="skill_icons" src="./assets/Skill_items/s1/si14.png" />
-            </div>
-        </div>
-        <div class="skill_item_group">
-            Scripting languages
-        </div>
-        <div class="skill_item_group">
-            Full Stack Technologies
-        </div>
-        <div class="skill_item_group">
-            Database
-        </div>
-        <div class="skill_item_group">
-            IDEs
+        <div style="padding-bottom:10px">
+            Tap or hover over the different technologies to know about the different tech-stacks I have worked in a professional and personnal capacity with.
         </div>
     </div>
 
