Added : Leetcode data postprocess
Postprocess received Leetcode response to extract required information

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -69,6 +69,9 @@
             Tap or hover over the technologies to know about the different tech-stacks I have worked with in a professional and personnal capacity.
         </div>
     </div>
+    <div>
+        Test text
+    </div>
 
     <div class="header-common-left" id="we_heading">
         Work Experience
