Added : Radial Progress viewer
Basic progress bar added, further customization to be done

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./CSS/ViewPage.css">
     <script src="./JS/ViewPage.js"></script>
 
+
 </head>
 
 <body>
@@ -70,7 +71,18 @@
         </div>
     </div>
     <div>
-        Test text
+        <div class="circular">
+            <div class="inner"></div>
+            <div class="number">100%</div>
+            <div class="circle">
+                <div class="bar left">
+                    <div class="progress"></div>
+                </div>
+                <div class="bar right">
+                    <div class="progress"></div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="header-common-left" id="we_heading">
