--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -71,16 +71,24 @@
         </div>
     </div>
     <div>
-        <div class="circular">
-            <div class="inner"></div>
-            <div class="number">100%</div>
-            <div class="circle">
-                <div class="bar left">
-                    <div class="progress"></div>
-                </div>
-                <div class="bar right">
-                    <div class="progress"></div>
-                </div>
+        <div class="progress_bar_container">
+            <div class="progress" id="bar_1" style="left: 33.34%">
+                <svg class="progress-circle" width="200px" height="200px" xmlns="http://www.w3.org/2000/svg">
+                    <circle class="progress-circle-back"
+                            cx="80" cy="80" r="74"></circle>
+                    <circle class="progress-circle-prog"
+                            cx="80" cy="80" r="74"></circle>
+                </svg>
+                <div class="progress-text" data-progress="0">0%</div>
+            </div>
+            <div class="progress" id="bar_1" style="left: 66.68%">
+                <svg class="progress-circle" width="200px" height="200px" xmlns="http://www.w3.org/2000/svg">
+                    <circle class="progress-circle-back"
+                            cx="80" cy="80" r="74"></circle>
+                    <circle class="progress-circle-prog"
+                            cx="80" cy="80" r="74"></circle>
+                </svg>
+                <div class="progress-text" data-progress="0">0%</div>
             </div>
         </div>
     </div>
