--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -65,14 +65,20 @@
     <div class="header-common-right" id="Snp_heading">
         Skills and Projects
     </div>
-    <div class="snp" id="snp_section">
-        <div style="padding-bottom:10px">
+    <div>
+        <div style="padding-left: 50px;font-size: 20px;">
             Tap or hover over the technologies to know about the different tech-stacks I have worked with in a professional and personnal capacity.
+        </div>
+        <div class="snp" id="snp_section">
+
         </div>
     </div>
     <div>
-        <div class="progress_bar_container">
-            <div class="progress" id="bar_1" style="left: 33.34%">
+        <div style="padding-left: 50px;padding-bottom: 50px;font-size: 20px;">Here's a quick look into my coding portfolio from
+            <a href="https://leetcode.com/Soham874/" target="_blank">Leetcode</a> [stored data displayed in beta phase]
+        </div>
+        <div style="position: relative;padding: 100px;">
+            <div class="progress" style="left: 33.34%">
                 <svg class="progress-circle" width="200px" height="200px" xmlns="http://www.w3.org/2000/svg">
                     <circle class="progress-circle-back"
                             cx="80" cy="80" r="74"></circle>
@@ -81,7 +87,7 @@
                 </svg>
                 <div class="progress-text" data-progress="0">0%</div>
             </div>
-            <div class="progress" id="bar_1" style="left: 66.68%">
+            <div class="progress" style="left: 66.68%">
                 <svg class="progress-circle" width="200px" height="200px" xmlns="http://www.w3.org/2000/svg">
                     <circle class="progress-circle-back"
                             cx="80" cy="80" r="74"></circle>
@@ -90,6 +96,13 @@
                 </svg>
                 <div class="progress-text" data-progress="0">0%</div>
             </div>
+        </div>
+        <div id="progress_bar_container">
+        </div>
+        <div class="category_buttons">
+            <div class="category_class" id="c1" style="color: var(--color-easy);">Easy</div>
+            <div class="category_class" id="c2" style="color: var(--color-medium);">Medium</div>
+            <div class="category_class" id="c3" style="color: var(--color-hard);">Hard</div>
         </div>
     </div>
 
