--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -80,7 +80,8 @@
         </div>
         <div>
             <div style="padding: 50px;font-size: 20px;text-align: justify;">Here's a quick look into my coding portfolio from
-                <a href="https://leetcode.com/Soham874/" target="_blank">Leetcode</a> [stored data displayed in beta phase]. Hover or tap on each question category type to know my stats in that particular level. Default displayed are my overall stats.
+                <a href="https://leetcode.com/Soham874/" target="_blank">Leetcode</a> [stored data displayed in beta phase]. Hover or tap on each question category type to know my stats in that particular level. Tap anywhere outside to see my overall
+                stats.
             </div>
             <div class="category_buttons">
                 <div class="category_class" id="c1" style="color: var(--color-easy);">Easy</div>
@@ -109,7 +110,11 @@
             </div>
             <div id="progress_bar_container">
             </div>
-
+            <div style="padding: 50px;font-size: 20px;text-align: justify;">Here's some projects from my
+                <a href="https://github.com/soham874" target="_blank">Github</a> profile [stored data displayed in beta phase].
+            </div>
+            <div id="github_projects">
+            </div>
         </div>
     </div>
 
