Added : Error divs
Logic and divs to be shown when data is not available added

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -70,15 +70,16 @@
         <div class="header-common-right" id="Snp_heading">
             Skills and Projects
         </div>
+        <!-- Skills... -->
         <div>
             <div style="padding-left: 50px;font-size: 20px;">
                 Tap or hover over the technologies to know about the different tech-stacks I have worked with in a professional and personnal capacity.
             </div>
             <div class="snp" id="snp_section">
-
             </div>
         </div>
-        <div>
+        <!-- Coding profile... -->
+        <div id="coding_container">
             <div style="padding: 50px;font-size: 20px;text-align: justify;">Here's a quick look into my coding portfolio from
                 <a href="https://leetcode.com/Soham874/" target="_blank">Leetcode</a> [stored data displayed in beta phase]. Hover or tap on each question category type to know my stats in that particular level. Tap anywhere outside to see my overall
                 stats.
@@ -110,10 +111,25 @@
             </div>
             <div id="progress_bar_container">
             </div>
+        </div>
+        <!-- Coding error... -->
+        <div class="error_api" id="leetcode_error">
+            <div>
+                LeetCode servers are not responding currently, and hence live data cannot be displayed. Please feel free to visit my Leetcode profile <a href="https://leetcode.com/Soham874/" target="_blank">here</a>.
+            </div>
+        </div>
+        <!-- Github profile... -->
+        <div id="github_container">
             <div style="padding: 50px;font-size: 20px;text-align: justify;">Here's some projects from my
                 <a href="https://github.com/soham874" target="_blank">Github</a> profile [stored data displayed in beta phase].
             </div>
             <div id="github_projects">
+            </div>
+        </div>
+        <!-- Github error... -->
+        <div class="error_api" id="github_error">
+            <div>
+                Github servers are not responding currently, and hence live data cannot be displayed. Please feel free to visit my Github profile <a href="https://github.com/soham874" target="_blank">here</a>.
             </div>
         </div>
     </div>
@@ -170,7 +186,7 @@
                     <a href="https://www.mongodb.com/atlas/database" target="_blank">MongoDB Atlas</a>
                 </li>
             </ul>
-            The project source code can be viewd <a href="https://github.com/soham874/Online-Web-Resume" target="_blank">here</a>.
+            Interested in what is hapenning under the hood? Have a look at the source code <a href="https://github.com/soham874/Online-Web-Resume" target="_blank">here</a>.
         </div>
     </div>
 
