Added : Work experience section
A section to display work experience

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -115,7 +115,7 @@
         <!-- Coding error... -->
         <div class="error_api" id="leetcode_error">
             <div>
-                LeetCode servers are not responding currently, and hence live data cannot be displayed. Please feel free to visit my Leetcode profile <a href="https://leetcode.com/Soham874/" target="_blank">here</a>.
+                LeetCode servers are not responding currently, I apologize for the inconvinience. Please feel free to visit my Leetcode profile <a href="https://leetcode.com/Soham874/" target="_blank">here</a>.
             </div>
         </div>
         <!-- Github profile... -->
@@ -129,7 +129,7 @@
         <!-- Github error... -->
         <div class="error_api" id="github_error">
             <div>
-                Github servers are not responding currently, and hence live data cannot be displayed. Please feel free to visit my Github profile <a href="https://github.com/soham874" target="_blank">here</a>.
+                Github servers are not responding currently, I apologize for the inconvinience. Please feel free to visit my Github profile <a href="https://github.com/soham874" target="_blank">here</a>.
             </div>
         </div>
     </div>
@@ -139,8 +139,10 @@
         <div class="header-common-left" id="we_heading">
             Work Experience
         </div>
-        <div class="body-common">
-
+        <div>
+            <!-- Timeline -->
+            <div class="timeline" id="work-exp">
+            </div>
         </div>
     </div>
 
@@ -165,7 +167,7 @@
     </div>
 
     <!-- About the page... -->
-    <div class="generic_div">
+    <div class="generic_div ">
         <div class="header-common-right" id="abp_heading">
             About the page
         </div>
@@ -191,19 +193,19 @@
     </div>
 
     <!-- Footer section... -->
-    <div class="footer-section">
-        <div class="thought-box sb4" id="thought-box">
+    <div class="footer-section ">
+        <div class="thought-box sb4 " id="thought-box ">
             <div>Thank you for considering to share your valuable opinions with me</div><br>
-            <textarea name="lname" id="lname" rows="15" maxlength="10"></textarea><br>
-            <button id="post_button">Post</button>
+            <textarea name="lname " id="lname " rows="15 " maxlength="10 "></textarea><br>
+            <button id="post_button ">Post</button>
         </div>
         <div>
             Made with ❤️ by Soham
         </div>
-        <div style="width: 100px">
-            <img alt="" src="./assets/sunny.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="imgClickAndChange" onclick="changeImage()" />
+        <div style="width: 100px ">
+            <img alt=" " src="./assets/sunny.png " style="height: 45px; width: 45px;transition: 500ms;padding:5px " id="imgClickAndChange" onclick="changeImage() " />
         </div>
-        <div id="thought-link" onclick="showThoughtBox()">
+        <div id="thought-link " onclick="showThoughtBox() ">
             Share a thought?
         </div>
     </div>
