Added : Academic profile

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -151,8 +151,28 @@
         <div class="header-common-right" id="ap_heading">
             Academic Profile
         </div>
-        <div class="body-common">
-
+        <div class="academic_section">
+            <div class="academic_info">
+                <h1>August 2016 - June 2020</h1>
+                <div><u><b>Institute</b></u>: Kalyani Government Engineering College</div>
+                <div><u><b>Board</b></u>: Maulana Abul Kalam Azad University of Technology</div>
+                <div><u><b>Education</b></u>: Bachelor of Technology, Mechanical Engineering</div>
+                <div><u><b>Score</b></u>: 8.75 GPA (80 %)</div>
+            </div>
+            <div class="academic_info">
+                <h1>August 2014 - May 2016</h1>
+                <div><u><b>Institute</b></u>: CMS High School, Bardhaman</div>
+                <div><u><b>Board</b></u>: West Bengal Council of Higher Secondary Education</div>
+                <div><u><b>Education</b></u>: Class 12</div>
+                <div><u><b>Score</b></u>: 87 %</div>
+            </div>
+            <div class="academic_info">
+                <h1>February 2003 - March 2014</h1>
+                <div><u><b>Institute</b></u>: St. Xavier’s School, Barddhaman</div>
+                <div><u><b>Board</b></u>: Council of Indian School Certificate Examination</div>
+                <div><u><b>Education</b></u>: Class 10</div>
+                <div><u><b>Score</b></u>: 90 %</div>
+            </div>
         </div>
     </div>
 
@@ -167,7 +187,7 @@
     </div>
 
     <!-- About the page... -->
-    <div class="generic_div ">
+    <div class="generic_div">
         <div class="header-common-right" id="abp_heading">
             About the page
         </div>
@@ -193,11 +213,11 @@
     </div>
 
     <!-- Footer section... -->
-    <div class="footer-section ">
-        <div class="thought-box sb4 " id="thought-box ">
+    <div class="footer-section">
+        <div class="thought-box sb4 " id="thought-box">
             <div>Thank you for considering to share your valuable opinions with me</div><br>
-            <textarea name="lname " id="lname " rows="15 " maxlength="10 "></textarea><br>
-            <button id="post_button ">Post</button>
+            <textarea name="lname" id="lname" rows="15" maxlength="10"></textarea><br>
+            <button id="post_button">Post</button>
         </div>
         <div>
             Made with ❤️ by Soham
@@ -205,7 +225,7 @@
         <div style="width: 100px ">
             <img alt=" " src="./assets/sunny.png " style="height: 45px; width: 45px;transition: 500ms;padding:5px " id="imgClickAndChange" onclick="changeImage() " />
         </div>
-        <div id="thought-link " onclick="showThoughtBox() ">
+        <div id="thought-link" onclick="showThoughtBox() ">
             Share a thought?
         </div>
     </div>
