Added : Load academic section profile from data

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -151,28 +151,7 @@
         <div class="header-common-right" id="ap_heading">
             Academic Profile
         </div>
-        <div class="academic_section">
-            <div class="academic_info">
-                <h1>August 2016 - June 2020</h1>
-                <div><u><b>Institute</b></u>: Kalyani Government Engineering College</div>
-                <div><u><b>Board</b></u>: Maulana Abul Kalam Azad University of Technology</div>
-                <div><u><b>Education</b></u>: Bachelor of Technology, Mechanical Engineering</div>
-                <div><u><b>Score</b></u>: 8.75 GPA (80 %)</div>
-            </div>
-            <div class="academic_info">
-                <h1>August 2014 - May 2016</h1>
-                <div><u><b>Institute</b></u>: CMS High School, Bardhaman</div>
-                <div><u><b>Board</b></u>: West Bengal Council of Higher Secondary Education</div>
-                <div><u><b>Education</b></u>: Class 12</div>
-                <div><u><b>Score</b></u>: 87 %</div>
-            </div>
-            <div class="academic_info">
-                <h1>February 2003 - March 2014</h1>
-                <div><u><b>Institute</b></u>: St. Xavier’s School, Barddhaman</div>
-                <div><u><b>Board</b></u>: Council of Indian School Certificate Examination</div>
-                <div><u><b>Education</b></u>: Class 10</div>
-                <div><u><b>Score</b></u>: 90 %</div>
-            </div>
+        <div class="academic_section" id="ac_info">
         </div>
     </div>
 
