Added : Casual section

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -161,7 +161,23 @@
             Lets get a bit casual?
         </div>
         <div class="body-common">
-
+            <p>
+                Gaming is easily one of my most crucial passtimes. A part of my day is always dedicated to it. Simulation games are my most favourite. I equally love sliding into virtual worlds to play with other players. Here are some of my most favourite titles:-
+                <div class="game_group">
+                    <div class="game_img" id="ksp"></div>
+                    <div class="game_img" id="subnautica"></div>
+                    <div class="game_img" id="rl"></div>
+                    <div class="game_img" id="cs"></div>
+                </div>
+            </p>
+            <p>
+                Meming is my next favourite thing. I love to delve deeper into the history of trending memes and find out what gave them their funny edge. Love that meme music but dont know where it is from? I probably do!
+            </p>
+            <p>
+                Last but not the least, I ocassionally pick up my pencil and drawing book. While I would not say drawing is my passion, I let the artist in me take control once in a while and draw a line here and a curve there. You can have a romp around my tiny art
+                gallery
+                <a href="https://photos.app.goo.gl/xUt6P46QvXgjAyBa6" target="_blank">here</a>.
+            </p>
         </div>
     </div>
 
@@ -195,7 +211,7 @@
     <div class="footer-section">
         <div class="thought-box sb4 " id="thought-box">
             <div>Thank you for considering to share your valuable opinions with me</div><br>
-            <textarea name="lname" id="lname" rows="15" maxlength="10"></textarea><br>
+            <textarea name="lname" id="lname" rows="15" maxlength="250"></textarea><br>
             <button id="post_button">Post</button>
         </div>
         <div>
