Added : Intro guide section

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -21,6 +21,19 @@
 
 <body>
 
+    <!-- Help section -->
+    <div class="help_div">
+        <div id="top_help">
+            <img src="assets/Uparray_light.png" />
+            <p style="margin:0px;">Quick scrool to different sections here</p>
+        </div>
+        <div id="bottom_help">
+            <p style="margin:0px;">Change the theme here</p>
+            <img src="assets/Downarray_light.png" />
+        </div>
+
+    </div>
+
     <!-- navbar... -->
     <div class="header-section">
         <div class="material-icons navbar-icon" onclick="showmenu()">menu</div>
@@ -52,7 +65,6 @@
 
     <!-- summary... -->
     <div class="generic_div">
-        <div style="height: 150px;"></div>
         <div class="header-common-left" id="Summary_heading">
             Summary
         </div>
