Added : Theme based arrows

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -24,12 +24,12 @@
     <!-- Help section -->
     <div class="help_div">
         <div id="top_help">
-            <img src="assets/Uparray_light.png" />
+            <img id="arr_up" src="assets/Uparray_light.png" />
             <p style="margin:0px;">Quick scrool to different sections here</p>
         </div>
         <div id="bottom_help">
             <p style="margin:0px;">Change the theme here</p>
-            <img src="assets/Downarray_light.png" />
+            <img id="arr_down" src="assets/Downarray_light.png" />
         </div>
 
     </div>
