--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -13,7 +13,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cagliostro&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./CSS/ViewPage.css">
+    <link rel="stylesheet" href="./CSS/CommonUtils.css">
+    <link rel="stylesheet" href="./CSS/Summary.css">
+    <link rel="stylesheet" href="./CSS/SkillsNProfiles.css">
+    <link rel="stylesheet" href="./CSS/WorkEmp.css">
+    <link rel="stylesheet" href="./CSS/Academics.css">
+    <link rel="stylesheet" href="./CSS/Casual.css">
 
 
     <script src="./JS/Academeics.js"></script>
@@ -180,7 +185,7 @@
         <div class="body-common">
             <p>
                 Gaming is easily one of my most crucial pastimes. A part of my day is always dedicated to it. Simulation games are my most favourite. I equally love sliding into virtual worlds to play online. Here are some of my most favourite titles; if you are into
-                either of them, lets have a cup of tea over it sometime🙂
+                either of them, lets have a cup of tea over it sometime :)
                 <div class="game_group">
                     <div class="game_img" id="ksp" onclick="window.open('https://store.steampowered.com/bundle/9245/Kerbal_Space_Program_Complete_Edition/','mywindow');" style="cursor: pointer;"></div>
                     <div class="game_img" id="subnautica" onclick="window.open('https://store.epicgames.com/en-US/p/subnautica','mywindow');" style="cursor: pointer;"></div>
@@ -205,7 +210,7 @@
         <div class="header-common-right " id="abp_heading">
             About the page
         </div>
-        <div class="body-common ">
+        <div class="body-common">
             This is my flagship project, developed in an attempt to have better understanding of different technologies used in full-stack development. The technologies used to develop the webapp are as follows:-
             <ul>
                 <li>WebApp Framework -
@@ -226,20 +231,30 @@
         </div>
     </div>
 
-    <!-- Footer section... -->
-    <div class="footer-section ">
-        <div class="thought-box sb4 " id="thought-box">
+    <!-- Contact me section... -->
+    <div class="generic_div">
+        <div class="header-common-left" id="contact_heading">
+            Contact me
+        </div>
+        <div class="body-common">
             <div>Thank you for considering to share your valuable opinions with me</div><br>
             <textarea name="lname" id="lname" rows="15" maxlength="250"></textarea><br>
             <button id="post_button">Post</button>
         </div>
-        <div>
-            Made with ❤️ by Soham
+    </div>
+
+    <!-- Footer section... -->
+    <div class="footer-section ">
+        <div class="thought-box sb4" id="thought-box">
+            <div>Thank you for considering to share your valuable opinions with me</div><br>
+            <textarea name="lname" id="lname" rows="15" cols="500" maxlength="250"></textarea><br>
+            <button id="post_button">Post</button>
         </div>
+        <div>Made with &lt;3 by Soham</div>
         <div style="width: 100px ">
             <img alt=" " src="./assets/sunny.png " style="height: 45px; width: 45px;transition: 500ms;padding:5px " id="imgClickAndChange" onclick="changeImage() " />
         </div>
-        <div id="thought-link" onclick="showThoughtBox() ">
+        <div id="thought-link" onclick="smoothScrolltoSection( '#contact_heading') ">
             Share a thought?
         </div>
     </div>
