Added : Social Profile Links

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -242,13 +242,13 @@
                     <h2>Thank you for choosing to share your opinions</h2>
                     <div class="links">
                         <div class="link">
-                            <a><img class="image" src="https://i.postimg.cc/m2mg2Hjm/linkedin.png" alt="linkedin"></a>
+                            <a href="https://www.linkedin.com/in/soham-choudhury-342289190/" target="_blank "><img class="image" src="https://i.postimg.cc/m2mg2Hjm/linkedin.png" alt="linkedin"></a>
                         </div>
                         <div class="link">
-                            <a><img class="image" src="https://i.postimg.cc/YCV2QBJg/github.png" alt="github"></a>
+                            <a href="https://github.com/soham874" target="_blank "><img class="image" src="https://i.postimg.cc/YCV2QBJg/github.png" alt="github"></a>
                         </div>
                         <div class="link">
-                            <a><img class="image" src="https://i.postimg.cc/NjLfyjPB/email.png" alt="email"></a>
+                            <a href="mailto:soham874@gmail.com" target="_blank "><img class="image" src="https://i.postimg.cc/NjLfyjPB/email.png" alt="email"></a>
                         </div>
                     </div>
                 </div>
